# globchat

./: README.md
globchat-server/: Cargo.toml
globchat-server/src/: db.rs  err.rs  extract.rs  main.rs  model.rs  response.rs  routes.rs  state.rs
globchat-server/src/routes/: auth.rs  info.rs  mod.rs  ws.rs
