[package]
name = "globchat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.5.0"
chrono = { version = "0.4.24", features = ["serde"] }
bson = { version = "2.6.1", features = ["uuid-0_8", "chrono-0_4"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.18", features = ["headers", "query", "ws"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
tracing = "0.1.37"
anyhow = "1.0.71"
thiserror = "1.0.40"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
clap = { version = "4.2.7", features = ["derive"] }
axum-extra = { version = "0.7.4", features = ["typed-routing"] }
tower-http = { version = "0.4.0", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
mime = "0.3.17"
bytes = "1.4.0"
