[package]
name = "globchat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.1"
axum = { version = "0.6.20", features = ["ws", "macros", "headers"] }
axum-macros = "0.3.8"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
mongodb = { version = "2.6.1", features = ["bson-chrono-0_4", "bson-uuid-0_8"] }
rand = "0.8.5"
rs-snowflake = "0.6.0"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
